feat(user, event): standardisation
